Added Day18Elizarov.kt and Day15P2.kt Some cleanup